# mnist

./: mlp.py  pixels.py  predict.py  pyproject.toml  random_model.py  submission.py  test_set.py  train_set.py
