[tool.poetry]
name = "mnist"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7.8"
pandas = "^1.2.3"
scikit-learn = "^0.24.1"
tensorboard = "^2.4.1"
Keras = "^2.4.3"

[tool.poetry.dev-dependencies]
seaborn = "^0.11.1"
ipdb = "^0.13.6"
pylint = "^2.7.2"
ipython = "^7.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
